--- a/TesteManaus_CarlosJozala.ipynb
+++ b/TesteManaus_CarlosJozala.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdiZypCU0fAVgENhhxMETX",
+      "authorship_tag": "ABX9TyPV4XP1oXQoU6VccToDkJDJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "# Salva o dataframe como um arquivo CSV\n",
         "df.to_csv(\"parte3_filtrado.csv\", index=False)\n",
         "\n",
-        "# Feche a conexão com o banco de dados\n",
+        "# Encerra conexão com o banco de dados\n",
         "conn.close()"
       ],
       "metadata": {
